--- a/src/pages/Popup/index.html
+++ b/src/pages/Popup/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width:360px; height:600px;">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body style="width:360px; height:600px;">
   <div id="popup"></div>
 </body>
 </html>
